Spring integration testing [IN PROGRESS]

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,26 @@
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+#https://www.thomasvitale.com/spring-data-jpa-hibernate-java-configuration/
 
-#To show sql in log
+spring.datasource.url=jdbc:postgresql://localhost:5432/pmaSpringDb
+spring.datasource.username=postgres
+spring.datasource.password=root
+
+#spring.datasource.driver-class-name=org.postgresql.Driver
+
+#TO AVOID RUNNING OF "Data.sql" file
+spring.datasource.initialization-mode=never
+
+
+#none => Here we dont want tables to be created by our java code
+#validate => Allows to checks compliance between java class's attibutes and their equivalent table's columns in db
+spring.jpa.hibernate.ddl-auto=create
+
+# Fix Postgres JPA Error (Method org.postgresql.jdbc.PgConnection.createClob() is not yet implemented).
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
 spring.jpa.show-sql=true
 
+#Turn to false because we are not in production
 spring.thymeleaf.cache=false
+
+application.name = Project Management Application
+
