Spring integration test [DONE]

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -9,7 +9,12 @@ spring.thymeleaf.cache=false
 #Environment variables
 application.name = PMATest
 
-#Dialect
-              #Url of h2 db and make the test running exactly the same way than with POSTGRES application above test
+#That 3 lines define the correct order of DROP statements[MANDATORY TO EXECUTE TEST!!!!!!]
+spring.jpa.properties.javax.persistence.schema-generation.database.action=drop-and-create
+spring.jpa.properties.javax.persistence.schema-generation.drop-source=script-then-metadata
+spring.jpa.properties.javax.persistence.schema-generation.drop-script-source=drop.sql
+
+#POSTGRES Dialect
+#Url of h2 db and make the test running exactly the same way than with POSTGRES application above test
 jdbc.url=jdbc:h2:mem:test;MODE=PostgreSQL;DB_CLOSE_DELAY=-1
 
