--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 #https://www.thomasvitale.com/spring-data-jpa-hibernate-java-configuration/
 
-#spring.datasource.url=jdbc:postgresql://localhost:5432/pmaSpringDb
-#spring.datasource.username=postgres
-#spring.datasource.password=root
+spring.datasource.url=jdbc:postgresql://localhost:5432/pmaSpringDb
+spring.datasource.username=postgres
+spring.datasource.password=root
 
 #FOR AWS EC2 INSTANCE
-spring.datasource.url=${jdbcurl}
-spring.datasource.username= ${dbuser}
-spring.datasource.password=${dbpwd}
+#spring.datasource.url=${jdbcurl}
+#spring.datasource.username= ${dbuser}
+#spring.datasource.password=${dbpwd}
 
 #spring.datasource.driver-class-name=org.postgresql.Driver
 
@@ -27,5 +27,5 @@ spring.jpa.show-sql=true
 #Turn to false because we are not in production
 spring.thymeleaf.cache=false
 
-application.name = Project Management Application
+application.name = ${name}
 
