AOP LOGGING [DONE]

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,31 +1,1 @@
-#https://www.thomasvitale.com/spring-data-jpa-hibernate-java-configuration/
-
-spring.datasource.url=jdbc:postgresql://localhost:5432/pmaSpringDb
-spring.datasource.username=postgres
-spring.datasource.password=root
-
-#FOR AWS EC2 INSTANCE
-#spring.datasource.url=${jdbcurl}
-#spring.datasource.username= ${dbuser}
-#spring.datasource.password=${dbpwd}
-
-#spring.datasource.driver-class-name=org.postgresql.Driver
-
-#TO AVOID RUNNING OF "Data.sql" file
-spring.datasource.initialization-mode=never
-
-
-#none => Here we dont want tables to be created by our java code
-#validate => Allows to checks compliance between java class's attibutes and their equivalent table's columns in db
-spring.jpa.hibernate.ddl-auto=create
-
-# Fix Postgres JPA Error (Method org.postgresql.jdbc.PgConnection.createClob() is not yet implemented).
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-
-spring.jpa.show-sql=true
-
-#Turn to false because we are not in production
-spring.thymeleaf.cache=false
-
-application.name = ${name}
-
+spring.profiles.active=dev
