--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,20 +1,1 @@
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-
-#To show sql in log
-spring.jpa.show-sql=true
-
-spring.thymeleaf.cache=false
-
-#Environment variables
-application.name = PMATest
-
-#That 3 lines define the correct order of DROP statements[MANDATORY TO EXECUTE TEST!!!!!!]
-spring.jpa.properties.javax.persistence.schema-generation.database.action=drop-and-create
-spring.jpa.properties.javax.persistence.schema-generation.drop-source=script-then-metadata
-spring.jpa.properties.javax.persistence.schema-generation.drop-script-source=drop.sql
-
-#POSTGRES Dialect
-#Url of h2 db and make the test running exactly the same way than with POSTGRES application above test
-jdbc.url=jdbc:h2:mem:test;MODE=PostgreSQL;DB_CLOSE_DELAY=-1
-
+spring.profiles.active=test
