SECURITY LAYER [IN PROGRESS] #1

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,46 +1,47 @@
-##https://www.thomasvitale.com/spring-data-jpa-hibernate-java-configuration/
-#
-#spring.datasource.url=jdbc:postgresql://localhost:5432/pmaSpringDb
-#spring.datasource.username=postgres
-#spring.datasource.password=root
-#
-##FOR AWS EC2 INSTANCE
-##spring.datasource.url=${jdbcurl}
-##spring.datasource.username= ${dbuser}
-##spring.datasource.password=${dbpwd}
-#
-##spring.datasource.driver-class-name=org.postgresql.Driver
-#
-##TO AVOID RUNNING OF "Data.sql" file
-#spring.datasource.initialization-mode=never
-#
-#
-##none => Here we dont want tables to be created by our java code
-##validate => Allows to checks compliance between java class's attibutes and their equivalent table's columns in db
-#spring.jpa.hibernate.ddl-auto=create
-#
-## Fix Postgres JPA Error (Method org.postgresql.jdbc.PgConnection.createClob() is not yet implemented).
-#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-#
-#spring.jpa.show-sql=true
-#
-##Turn to false because we are not in production
-#spring.thymeleaf.cache=false
-#
-#application.name = ${namedev}
-#
+#https://www.thomasvitale.com/spring-data-jpa-hibernate-java-configuration/
 
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:postgresql://localhost:5433/pmaSpringDb
+spring.datasource.username=postgres
+spring.datasource.password=root
 
-#To show sql in log
+#FOR AWS EC2 INSTANCE
+#spring.datasource.url=${jdbcurl}
+#spring.datasource.username= ${dbuser}
+#spring.datasource.password=${dbpwd}
+
+#spring.datasource.driver-class-name=org.postgresql.Driver
+
+#TO AVOID RUNNING OF "Data.sql" file
+spring.datasource.initialization-mode=never
+
+
+#none => Here we dont want tables to be created by our java code
+#validate => Allows to checks compliance between java class's attibutes and their equivalent table's columns in db
+spring.jpa.hibernate.ddl-auto=none
+
+# Fix Postgres JPA Error (Method org.postgresql.jdbc.PgConnection.createClob() is not yet implemented).
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
 spring.jpa.show-sql=true
 
+#Turn to false because we are not in production
 spring.thymeleaf.cache=false
 
-#Environment variables
 application.name = ${namedev}
+admin.password = ${adminPwd}
+
+
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
+#spring.datasource.url=jdbc:h2:mem:testdb
+
+#To show sql in log
+#spring.jpa.show-sql=true
+#
+#spring.thymeleaf.cache=false
+#
+##Environment variables
+#application.name = ${namedev}
 
 #That 3 lines define the correct order of DROP statements[MANDATORY TO EXECUTE TEST!!!!!!]
 spring.jpa.properties.javax.persistence.schema-generation.database.action=drop-and-create
