--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -62,3 +62,5 @@ logging.level.org.springframework=INFO
 # INFO  > WARN > DEBUG , INFO is at most high level logging
 logging.file.name=app.log
 #logging.pattern.dateformat=yyyy-MM-dd
+
+server.error.whitelabel.enabled=false
