--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -64,3 +64,9 @@ logging.file.name=app.log
 #logging.pattern.dateformat=yyyy-MM-dd
 
 server.error.whitelabel.enabled=false
+
+
+# we need the below property to turn off hibernate auto validation
+# we are using constraints validation and customizing our data validation
+# rules
+spring.jpa.properties.javax.persistence.validation.mode=none
